--- a/projects/mdmf-profile/src/app/profile/components/list-user/list-user.component.html
+++ b/projects/mdmf-profile/src/app/profile/components/list-user/list-user.component.html
@@ -14,7 +14,7 @@
         <td>{{ user.name }}</td>
         <td>{{ user.email }}</td>
         <td> 
-          <button (click)="removeUser(user)" class="btn btn-danger">Remove User</button>
+          <button (click)="removeUser(user)" class="btn btn-danger">Remove User chang in local E</button>
         </td>        
       </tr>
     </tbody>
